--- a/client/src/components/Dashboard/dashboard.css
+++ b/client/src/components/Dashboard/dashboard.css
@@ -19,11 +19,17 @@
     /* border: 1px solid red; */
 }
 
-.avatar img {
+.avatar-image {
     height: 140px;
     width: 140px;
     border-radius: 50%;
     background-color: var(--primary);
+}
+
+.flag {
+    height: 32px;
+    width: 58px;
+    border-radius: 0;
 }
 
 .edit {
@@ -160,7 +166,6 @@
     /* border-right: 1px solid white; */
     cursor: pointer;
     padding: 10px 0;
-
     font-family: 'Roboto', sans-serif;
    
 }
@@ -182,6 +187,24 @@
     background-color: rgb(0, 0, 0, 0.1);
     border-bottom: 2px solid var(--primary);
     padding: 10px;
+}
+
+.your-profile select {
+    margin-bottom: 20px;
+    /* background-color: ; */
+    border: none;
+    border-bottom: 2px solid var(--primary);
+    padding: 10px;
+    width: 60%;
+}
+
+.your-profile button {
+    background-color: white;
+    font-weight: bold;
+    border: 1px solid;
+    padding: 5px 10px;
+    border-radius: 3px;
+    margin-left: 15px;
 }
 
 .your-posts {
@@ -280,7 +303,7 @@
 
 @media (max-width: 750px) {
 
-    .avatar img {
+    .avatar-image {
         height: 100px;
         width: 100px;
         border-radius: 50%;
@@ -400,11 +423,20 @@
         margin-right: 10px;
         margin-top: 10px;
     }
+
+    .your-profile p {
+       font-size: smaller;
+    }
+
+    .flag {
+        height: 26px;
+        width: 40px;
+    }
 }
 
 @media (max-width: 350px) {
 
-    .avatar img {
+    .avatar-image {
         height: 80px;
         width: 80px;
         border-radius: 30%;
