--- a/client/src/components/Reader/reader.css
+++ b/client/src/components/Reader/reader.css
@@ -20,10 +20,12 @@
     padding: 10px 8px;
     border-radius: 4px;
     line-height: clamp(28px, 3vw, 36px);
+    display: flex;
 }
 
 .main-post img {
     width: 100%;
+    max-width: 400px;
 }
 
 .Reader hr {
@@ -111,4 +113,15 @@
    border-radius: 50%;
    margin-right: 10px;
    padding: 2px;
+}
+
+@media (max-width: 650px) {
+    .main-post {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .main-post img {
+        max-width: 250px;
+    }
 }
