--- a/client/src/components/Dashboard/dashboard.css
+++ b/client/src/components/Dashboard/dashboard.css
@@ -24,6 +24,8 @@
     width: 140px;
     border-radius: 50%;
     background-color: var(--primary);
+    /* border: 2px solid white; */
+    box-shadow: 2px 3px 8px 1px rgb(0,0,0,0.3);
 }
 
 .flag {
@@ -328,6 +330,7 @@
     .avatar-image {
         height: 100px;
         width: 100px;
+        min-width: 100px;
         border-radius: 50%;
     }
 
@@ -384,7 +387,7 @@
 
     .your-stats div {
         width: 45%;
-        margin: 9px auto;
+        margin: 9px 0;
         font-size: xx-small;
         padding: 10px 0;
         border-radius: 8px;
@@ -475,6 +478,7 @@
     .avatar-image {
         height: 80px;
         width: 80px;
+        min-width: 80px;
         border-radius: 30%;
     }
 
