--- a/client/src/components/ErrorPage/404page.css
+++ b/client/src/components/ErrorPage/404page.css
@@ -6,11 +6,14 @@
 .left-section .inner-content {
   position: absolute;
   top: 50%;
-  transform: translateY(-50%); }
+  transform: translateY(-50%);
+  /* display: none; */
+}
 
 .error404 {
   background-color: var(--primary);
   color: white;
+  /* max-height: 95vw; */
 }
 
 .background {
@@ -34,15 +37,15 @@
   position: relative;
   margin: 0 auto;
   width: 85%;
-  height: 100vh;
-  padding-bottom: 25vh;
+  height: 89vh;
+  padding-bottom: 20vh;
   display: flex;
   flex-direction: row;
   justify-content: space-around; }
   @media (max-width: 770px) {
     .container {
       flex-direction: column;
-      padding-bottom: 0vh; } }
+      padding-bottom: 9vh; } }
 
 .left-section, .right-section {
   position: relative; }
