--- a/client/src/components/Layout/layout.css
+++ b/client/src/components/Layout/layout.css
@@ -3,6 +3,7 @@ header {
     height: 56px;
 }
 
+
 .Navigation {
     display: flex;
     align-items: center;
@@ -360,6 +361,9 @@ font-family: 'Roboto', sans-serif;
         display: none;
     }
 
+    .smwrite {
+        display: block !important;
+    }
 }
 
 @media (max-width: 535px) {
