--- a/client/src/components/Reader/reader.css
+++ b/client/src/components/Reader/reader.css
@@ -19,8 +19,11 @@
     font-size: clamp(15px, 1.8vw, 18px);
     padding: 10px 8px;
     border-radius: 4px;
-    line-height: clamp(26px, 3.2vw, 32px);
+    line-height: clamp(20px, 3vw, 26px);
     display: flex;
+    white-space: pre-line;
+    flex-direction: column;
+    align-items: center;
 }
 
 .main-post img {
@@ -43,7 +46,7 @@
 }
 
 .Reader form button {
-    padding: 10px 15px;
+    padding: 16px 15px;
     margin-top: 10px;
     color: white;
     font-family: 'Roboto', sans-serif;
