--- a/client/src/components/Reader/reader.css
+++ b/client/src/components/Reader/reader.css
@@ -45,7 +45,7 @@
     border-bottom: 1px solid var(--primary);
 }
 
-.Reader form button {
+.Reader .reply-form button {
     padding: 16px 15px;
     margin-top: 10px;
     color: white;
@@ -116,6 +116,57 @@
    border-radius: 50%;
    margin-right: 10px;
    padding: 2px;
+}
+
+.report-modal {
+    background-color: white;
+    text-align: center;
+    max-width: 520px;
+    border-radius: 4px;
+    box-shadow: 2px 4px 10px 3px rgb(0,0,0,0.3);
+    padding: 15px 0;
+    width: 95%;
+
+    position: fixed;
+    top: 15%;
+    left: 50%;
+    transform: scale(0) translateX(-50%);
+}
+
+.report-modal input,
+.report-modal select,
+.report-modal textarea {
+    /* background-color: white; */
+    border: 1px solid var(--primary);
+    width: 90%;
+    margin: 10px auto;
+    padding: 10px;
+}
+
+.report-modal-btns {
+    display: flex;
+    justify-content: space-around;
+}
+
+.report-modal p {
+    font-size: clamp(12px,1.5vw,18px);
+}
+
+.report-modal button {
+    background-color: white;
+    /* color: black; */
+    padding: 9px 15px;
+
+    /* padding: 16px 15px; */
+    /* margin-top: 10px; */
+    /* color: white; */
+    font-family: 'Roboto', sans-serif;
+
+    font-weight: 700;
+    border-radius: 4px;
+    border: 1px solid var(--primary);
+    cursor: pointer;
+    /* background-color: var(--primary); */
 }
 
 @media (max-width: 650px) {
