--- a/client/src/components/Dashboard/dashboard.css
+++ b/client/src/components/Dashboard/dashboard.css
@@ -92,16 +92,22 @@
     align-items: center;
     justify-content: center;
     gap: 35px;
+
 }
 
 .DP-preview img {
-    height: 80%;
-    width: 73vh;
+    height: 40vw;
+    width: 40vw;
+   
     max-width: 560px;
-    border-radius: 10px;
-    box-shadow: 0px 0px 9px 2px white;
+    max-height: 560px;
+    border-radius: 50%;
+    object-fit: cover;
+    /* box-shadow: 0px 0px 9px 2px white; */
     background-color: var(--primary);
+    
 }
+
 
 .DP-preview div {
     display: flex;
@@ -116,6 +122,14 @@
     padding: 10px 12px;
     font-size: unset;
     border-radius: 3px;
+}
+
+.DP-preview p {
+    color: white;
+    /* font-weight: bold; */
+    padding: 0px 12px;
+    text-align: center;
+    font-size: clamp(13px,1.3vw,17px);
 }
 
 .procee {
@@ -332,6 +346,7 @@
         width: 100px;
         min-width: 100px;
         border-radius: 50%;
+        object-fit: cover;
     }
 
 
@@ -378,9 +393,9 @@
     padding: 0;
     }
 
-    .your-posts .cat-act,
-    .your-posts .author {
-        display: none;
+    .your-posts .cat-act button {
+        font-size: xx-small;
+        padding: 5px 7px;
     }
   
 
@@ -416,11 +431,7 @@
        gap: 20px;
     }
     
-    .DP-preview img {
-    width: 60%;
-    min-width: 250px;
-        height: 60vw;
-    }
+    
     
     .DP-preview div {
         display: flex;
@@ -447,6 +458,11 @@
         margin-right: 10px;
         margin-top: 10px;
     }
+
+    .DP-preview img {
+        height: 80vw;
+        width: 80vw;
+        }
 
     .your-profile p {
        font-size: smaller;
