--- a/client/src/components/Reader/reader.css
+++ b/client/src/components/Reader/reader.css
@@ -116,6 +116,7 @@
    border-radius: 50%;
    margin-right: 10px;
    padding: 2px;
+   object-fit: cover;
 }
 
 .report-modal {
@@ -167,6 +168,39 @@
     border: 1px solid var(--primary);
     cursor: pointer;
     /* background-color: var(--primary); */
+}
+
+.delete-modal {
+    background-color: white;
+    text-align: center;
+    max-width: 520px;
+    border-radius: 4px;
+    box-shadow: 2px 4px 10px 3px rgb(0,0,0,0.3);
+    padding: 15px 0;
+    width: 95%;
+
+    position: fixed;
+    top: 15%;
+    left: 50%;
+    transform: scale(0) translateX(-50%);
+}
+
+.delete-modal div {
+    display: flex;
+    justify-content: space-around;
+    width: 230px;
+    margin: 0 auto;
+}
+
+.delete-modal button {
+    background-color: white;
+    padding: 9px 15px;
+    font-family: 'Roboto', sans-serif;
+
+    font-weight: 700;
+    border-radius: 4px;
+    border: 1px solid var(--primary);
+    cursor: pointer;
 }
 
 @media (max-width: 650px) {
