--- a/client/src/components/AllPosts/allposts.css
+++ b/client/src/components/AllPosts/allposts.css
@@ -28,7 +28,8 @@
 .Allposts .posts {
     padding: 20px;
     max-width: 800px;
-    margin: 30px auto;
+    margin: 0px auto;
+    margin-top: 30px;
 }
 
 .Allposts .post {
