--- a/client/src/components/ErrorPage/404page.css
+++ b/client/src/components/ErrorPage/404page.css
@@ -1,19 +1,15 @@
-
-
-
 @import url("https://fonts.googleapis.com/css?family=Fira+Sans");
+
 /*Variables*/
 .left-section .inner-content {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  /* display: none; */
 }
 
 .error404 {
   background-color: var(--primary);
   color: white;
-  /* max-height: 95vw; */
 }
 
 .background {
@@ -22,16 +18,22 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(#0C0E10, var(--primary)); }
+  background: linear-gradient(#0C0E10, var(--primary));
+}
+
+.background .ground {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 25vh;
+  background: rgb(0, 0, 0, 0.85);
+}
+
+@media (max-width: 770px) {
   .background .ground {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 25vh;
-    background: rgb(0, 0, 0,0.85); }
-    @media (max-width: 770px) {
-      .background .ground {
-        height: 0vh; } }
+    height: 0vh;
+  }
+}
 
 .container {
   position: relative;
@@ -41,27 +43,40 @@
   padding-bottom: 20vh;
   display: flex;
   flex-direction: row;
-  justify-content: space-around; }
-  @media (max-width: 770px) {
-    .container {
-      flex-direction: column;
-      padding-bottom: 9vh; } }
+  justify-content: space-around;
+}
 
-.left-section, .right-section {
-  position: relative; }
+@media (max-width: 770px) {
+  .container {
+    flex-direction: column;
+    padding-bottom: 9vh;
+  }
+}
+
+.left-section,
+.right-section {
+  position: relative;
+}
 
 .left-section {
-  width: 40%; }
-  @media (max-width: 770px) {
-    .left-section {
-      width: 100%;
-      height: 40%;
-      position: absolute;
-      top: 0; } }
-  @media (max-width: 770px) {
-    .left-section .inner-content {
-      position: relative;
-      padding: 1rem 0; } }
+  width: 40%;
+}
+
+@media (max-width: 770px) {
+  .left-section {
+    width: 100%;
+    height: 40%;
+    position: absolute;
+    top: 0;
+  }
+}
+
+@media (max-width: 770px) {
+  .left-section .inner-content {
+    position: relative;
+    padding: 1rem 0;
+  }
+}
 
 .heading {
   text-align: center;
@@ -69,12 +84,16 @@
   line-height: 1.3em;
   margin: 2rem 0 0.5rem 0;
   padding: 0;
-  text-shadow: 0 0 1rem #fefefe; }
-  @media (max-width: 770px) {
-    .heading {
-      font-size: 6.5em;
-      line-height: 1.15;
-      margin: 0; } }
+  text-shadow: 0 0 1rem #fefefe;
+}
+
+@media (max-width: 770px) {
+  .heading {
+    font-size: 6.5em;
+    line-height: 1.15;
+    margin: 0;
+  }
+}
 
 .subheading {
   text-align: center;
@@ -82,21 +101,29 @@
   font-size: 1.5em;
   line-height: 1.15em;
   padding: 0 1rem;
-  margin: 0 auto; }
-  @media (max-width: 770px) {
-    .subheading {
-      font-size: 1.1em;
-      line-height: 1.15;
-      max-width: 100%; } }
+  margin: 0 auto;
+}
+
+@media (max-width: 770px) {
+  .subheading {
+    font-size: 1.1em;
+    line-height: 1.15;
+    max-width: 100%;
+  }
+}
 
 .right-section {
-  width: 50%; }
-  @media (max-width: 770px) {
-    .right-section {
-      width: 100%;
-      height: 60%;
-      position: absolute;
-      bottom: 0; } }
+  width: 50%;
+}
+
+@media (max-width: 770px) {
+  .right-section {
+    width: 100%;
+    height: 60%;
+    position: absolute;
+    bottom: 0;
+  }
+}
 
 .svgimg {
   position: absolute;
@@ -104,31 +131,56 @@
   padding-top: 10vh;
   padding-left: 1vh;
   max-width: 100%;
-  max-height: 100%; }
-  @media (max-width: 770px) {
-    .svgimg {
-      padding: 0; } }
-  .svgimg .bench-legs {
-    fill: #0C0E10; }
-  .svgimg .top-bench, .svgimg .bottom-bench {
-    stroke: #0C0E10;
-    stroke-width: 1px;
-    fill: #5B3E2B; }
-  .svgimg .bottom-bench path:nth-child(1) {
-    fill: #432d20; }
-  .svgimg .lamp-details {
-    fill: #202425; }
-  .svgimg .lamp-accent {
-    fill: #2c3133; }
-  .svgimg .lamp-bottom {
-    fill: linear-gradient(#202425, #0C0E10); }
-  .svgimg .lamp-light {
-    fill: #EFEFEF; }
+  max-height: 100%;
+}
+
+@media (max-width: 770px) {
+  .svgimg {
+    padding: 0;
+  }
+}
+
+.svgimg .bench-legs {
+  fill: #0C0E10;
+}
+
+.svgimg .top-bench,
+.svgimg .bottom-bench {
+  stroke: #0C0E10;
+  stroke-width: 1px;
+  fill: #5B3E2B;
+}
+
+.svgimg .bottom-bench path:nth-child(1) {
+  fill: #432d20;
+}
+
+.svgimg .lamp-details {
+  fill: #202425;
+}
+
+.svgimg .lamp-accent {
+  fill: #2c3133;
+}
+
+.svgimg .lamp-bottom {
+  fill: linear-gradient(#202425, #0C0E10);
+}
+
+.svgimg .lamp-light {
+  fill: #EFEFEF;
+}
 
 @keyframes glow {
   0% {
-    text-shadow: 0 0 1rem #fefefe; }
+    text-shadow: 0 0 1rem #fefefe;
+  }
+
   50% {
-    text-shadow: 0 0 1.85rem #ededed; }
+    text-shadow: 0 0 1.85rem #ededed;
+  }
+
   100% {
-    text-shadow: 0 0 1rem #fefefe; } }
+    text-shadow: 0 0 1rem #fefefe;
+  }
+}
