--- a/client/src/components/Layout/layout.css
+++ b/client/src/components/Layout/layout.css
@@ -1,4 +1,3 @@
-
 header {
     height: 56px;
 }
@@ -9,7 +8,6 @@ header {
     align-items: center;
     justify-content: space-between;
     padding: 15px 3vw;
-    /* background-color: var(--bg-color); */
     position: fixed;
     right: 0;
     left: 0;
@@ -17,18 +15,21 @@ header {
 }
 
 .nav-alt {
-      background: url(../Home/assets/giphy.gif), var(--primary) !important;
+    background: url(../Home/assets/giphy.gif), var(--primary) !important;
 }
 
-.nav-alt h2, .nav-alt2 h2 {
+.nav-alt h2,
+.nav-alt2 h2 {
     color: white !important;
 }
+
 .nav-alt2 {
     background: url(../Home/assets/giphy.gif), black !important;
 }
 
 
-.nav-alt .write, .nav-alt2 .write {
+.nav-alt .write,
+.nav-alt2 .write {
     color: white !important;
     border: 1px solid rgb(255, 255, 255);
 }
@@ -77,15 +78,11 @@ header {
 .search-result {
     position: fixed;
     background-color: white;
-
-    
     width: 160px;
     padding: 0px 10px;
     border-radius: 4px;
     top: 51px;
     right: 5vw;
-    /* transform: translateX(58vw); */
-
     display: none;
 }
 
@@ -93,7 +90,7 @@ header {
     display: block;
 }
 
-.search input:focus ~ .search-result {
+.search input:focus~.search-result {
     display: block;
 }
 
@@ -111,18 +108,18 @@ nav {
 .write {
     padding: 5px 12px;
     color: #1b1c1e;
-   font-family: var(--button-font);
-   font-weight: 700;
+    font-family: var(--button-font);
+    font-weight: 700;
     border-radius: 4px;
     border: 1px solid var(--primary);
     transition: .5s;
     cursor: pointer;
     background: none;
 }
+
 .write:hover {
     color: white;
     background-color: var(--primary);
-    /* border: 1px solid white; */
 }
 
 .write span {
@@ -131,17 +128,15 @@ nav {
 }
 
 .Navigation ul {
-   
+
     padding-top: 6.5px;
-    
+
 }
 
 .Navigation li {
     display: inline;
     margin-right: 15px;
-    /* font-family: 'Righteous', cursive; */
     cursor: pointer;
-    /* position: relative; */
     align-items: center;
     color: var(--my-black);
 }
@@ -153,11 +148,9 @@ nav {
 
 
 .Navigation li span {
-  
     font-size: 12px;
     align-self: baseline;
     margin-left: 10px;
-    /* transform: rotate(90deg); */
     display: inline-block;
 }
 
@@ -178,7 +171,7 @@ nav {
     overflow: hidden;
 }
 
-.categories ul{
+.categories ul {
     display: grid;
     column-gap: 20px;
     grid-template-columns: auto auto;
@@ -190,7 +183,7 @@ li:hover .categories {
     opacity: 1;
     height: 160px;
     overflow: visible;
-    
+
 }
 
 .categories:hover {
@@ -208,11 +201,11 @@ li:hover .categories {
 }
 
 .auth button {
-   
+
     padding: 5px 13px;
     color: white;
     font-family: 'Righteous', cursive;
-    
+
     margin-right: 10px;
     border-radius: 4px;
     border: 1px solid var(--primary);
@@ -244,7 +237,7 @@ li:hover .categories {
 
 .search input::placeholder {
     color: var(--my-black);
-font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto', sans-serif;
 
 }
 
@@ -266,9 +259,11 @@ font-family: 'Roboto', sans-serif;
     width: 21px;
     height: 3px;
 }
+
 .change div:nth-child(2) {
     opacity: 0;
 }
+
 .change div:nth-child(3) {
     transform: rotate(-45deg) translate(2px, -8px);
     width: 21px;
@@ -383,7 +378,7 @@ font-family: 'Roboto', sans-serif;
     }
 
     .menu-content button {
-       display: block;
+        display: block;
     }
 
     .search-result {
